<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.sleimi.abir.projecthaffeli.NewAccountActivity"
    android:gravity="center_vertical|clip_horizontal"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/user_register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|clip_horizontal"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:text="Créer un nouveau compte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="0.46"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="normal|bold|italic"
                android:fontFamily="sans-serif"
                android:textSize="25sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:layout_marginTop="15dp"
                android:color="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <AutoCompleteTextView
                    android:id="@+id/TF_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:color="@android:color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:color="@android:color/black"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/TF_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:color="@android:color/black"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:color="@android:color/black"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/TF_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-entrez mot de passe"
                    android:color="@android:color/black"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"/>

                <!-- <requestFocus /></EditText> -->


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/nomWrapper"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:layout_marginTop="15dp"
                android:color="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/TF_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nom"
                    android:color="@android:color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailprenom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:layout_marginTop="15dp"
                android:color="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/TF_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_prenom"
                    android:color="@android:color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/telWrapper"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0.46"
                android:layout_marginTop="15dp"
                android:color="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/TF_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_tel"
                    android:color="@android:color/black"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/TF_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_sex"
                android:color="@android:color/black"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"/>

        <LinearLayout
            android:id="@+id/sex_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|clip_horizontal"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:text="Masculin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonMasculin"
                    android:layout_weight="0.3"
                    android:checked="true"/>

            <RadioButton
                android:text="Femin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonFemin"
                android:layout_weight="0.3" />

        </RadioGroup>

            </LinearLayout>
            <TextView
                android:id="@+id/TF_etat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_etat"
                android:color="@android:color/black"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"/>

                <RadioGroup
                    android:id="@+id/radioetat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <!--LinearLayout
                        android:id="@+id/etat_form1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|clip_horizontal"
                        android:orientation="horizontal"-->
            <RadioButton
                android:text="Célibataire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonCelib"
                android:layout_weight="0.3"
                android:checked="true"/>
            <RadioButton
                android:text="En couple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonEnCouple"
                android:layout_weight="0.3" />


            <!--LinearLayout
                android:id="@+id/etat_form2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|clip_horizontal"
                android:orientation="horizontal"-->
            <RadioButton
                android:text="Fiancé(e)"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonFiance"
                android:layout_weight="0.3" />
            <RadioButton
                android:text="Marié(e)"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMarie"
                android:layout_weight="0.3" />

            </RadioGroup>

            <LinearLayout
            android:id="@+id/button_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|clip_horizontal"
            android:orientation="horizontal">
            <!--style="@android:style/Widget.Material.Button.Borderless.Colored"-->
            <Button
                android:id="@+id/register_button"
                android:theme="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:onClick="onButtonClick"
                android:layout_weight="0.54"
                android:elevation="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="normal|bold|italic"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:visibility="visible" />
            <Button
                android:id="@+id/cancel_button"
                android:theme="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_cancel"
                android:onClick="onButtonClick"
                android:layout_weight="0.54"
                android:elevation="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="normal|bold|italic"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:visibility="visible" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
